# Math-Lib

./: CMakeLists.txt  General.c  Matrix.c  Quaternion.c  README.md  Transform.c  Vector.c
include/: Constant.h  MD_Math.h  MD_Matrix.h  MD_Quaternion.h  MD_Vector.h
test/test1/: build.bat  main.c
test/test2/: main.c
test/test3/: main.c
test/test4/: main.c
test/test5/: glad.c  glad.h  main.c
test/test6/: main.c
